package com.jad.sensordata;

import com.jad.sharedmodel.SensorType;

class HumiditySensor extends AbstractSensor {

    public HumiditySensor() {
        super(SensorType.HUMIDITY);
    }
}
