package com.jad.sensordata;

import com.jad.sharedmodel.SensorType;

class PressureSensor extends AbstractSensor {
    public PressureSensor() {
        super(SensorType.PRESSURE);
    }
}
