package com.jad.sensordata;

import com.jad.sharedmodel.SensorType;

class TemperatureSensor extends AbstractSensor {
    public TemperatureSensor() {
        super(SensorType.TEMPERATURE);
    }
}
