package com.jad.sensordata;

import com.jad.sharedmodel.SensorType;

class WindSpeedSensor extends AbstractSensor {
    public WindSpeedSensor() {
        super(SensorType.WIND_SPEED);
    }
}
