package com.jad.sharedmodel;

public interface ISensor {
    SensorType getSensorType();

    SensorData getSensorData();
}

